[package]
name = "plonky2-circuit-serializer"
version = "1.0.2"
edition = "2021"


[dependencies]
plonky2 = { git = "https://github.com/0x5ea000000/plonky2" }
plonky2_crypto = { git = "https://github.com/0x5ea000000/plonky2-crypto" }
plonky2_ed25519 = { git = "https://github.com/0x5ea000000/plonky2-ed25519" }
log = { version = "0.4.14", default-features = false }
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
multithreaded-fs = { git = "https://github.com/Electron-Labs/multithreaded-fs.git", branch = "dev"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"
tracing-test = "0.2.4"
